T1163  - JSql.struct - code coverage and migration